--- a/TodoMap/Base.lproj/Main.storyboard
+++ b/TodoMap/Base.lproj/Main.storyboard
@@ -32,15 +32,6 @@
                                     <segue destination="OxF-Fq-oQP" kind="presentation" identifier="toedit" modalPresentationStyle="fullScreen" id="ab9-j6-N5A"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SCi-4F-CtA">
-                                <rect key="frame" x="50" y="767" width="59" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="更新"/>
-                                <connections>
-                                    <action selector="reload" destination="BYZ-38-t0r" eventType="touchUpInside" id="vMB-v8-PBC"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -113,6 +104,7 @@
                                                 <buttonConfiguration key="configuration" style="plain" title="保存"/>
                                                 <connections>
                                                     <action selector="save" destination="OxF-Fq-oQP" eventType="touchUpInside" id="HfS-v6-adP"/>
+                                                    <action selector="save" destination="AnW-kT-9c9" eventType="touchUpInside" id="epp-dy-SVP"/>
                                                 </connections>
                                             </button>
                                         </barButtonItem>
